Bug 500102 - Regression: systray takes non-symbolic icons despite the new feature should do the exact opposite
Summary: Regression: systray takes non-symbolic icons despite the new feature should d...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 6.3.0
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 500346 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-02-15 00:40 UTC by Christian (Fuchs)
Modified: 2025-02-24 13:10 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.2
Sentry Crash Report:


Attachments
Screenshot of the issue, ktorrent and kmail should both be symbolic, but aren't (16.60 KB, image/png)
2025-02-15 00:40 UTC, Christian (Fuchs)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christian (Fuchs) 2025-02-15 00:40:41 UTC
Created attachment 178389 [details]
Screenshot of the issue, ktorrent and kmail should both be symbolic, but aren't

SUMMARY
As per https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4865/commits or https://bugs.kde.org/show_bug.cgi?id=487026  Plasma 6.3 should prefer symbolic icons over non-symbolic ones.

However, somehow the exact opposite happens now.

STEPS TO REPRODUCE
1.  Update to plasma 6.3
2.  Start either kontact / kmail or ktorrent with the systray icon enabled

OBSERVED RESULT
Colourful icon is used

EXPECTED RESULT
Symbolic icon is used, since there are -symbolic.svg icons for both of these apps
Also it did work in 6.2 

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 41
KDE Plasma Version: 6.3.0
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.2
Kernel Version: 6.12.11-200.fc41.x86_64 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i5-8265U CPU @ 1.60GHz
Memory: 15.4 GiB of RAM
Graphics Processor: Intel® UHD Graphics 620
Manufacturer: LENOVO
Product Name: 20NQS30W00
Comment 1 Akseli Lahtinen 2025-02-18 13:16:44 UTC
Can confirm the Kmail icon is colored, not symbolic.

Operating System: Fedora Linux 41
KDE Plasma Version: 6.3.80
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2
Kernel Version: 6.12.13-200.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600
Comment 2 Bug Janitor Service 2025-02-19 05:57:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5227
Comment 3 Bug Janitor Service 2025-02-19 15:13:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kiconthemes/-/merge_requests/175
Comment 4 Nate Graham 2025-02-19 19:04:24 UTC
*** Bug 500346 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2025-02-19 19:41:51 UTC
Git commit 78ca2a2a1a52d20ccc98644156bc5b8067e45b68 by Nate Graham.
Committed on 19/02/2025 at 19:41.
Pushed by ngraham into branch 'master'.

applets/systemtray: Don't unnecessarily append -symbolic to icon names

41d8bb43f6697b2cd5d3fd57790b9c35d69b11a8 removed a check that the icon
name ends with "-symbolic" in favor of a function call to
`iconLoader()->hasIcon(iconName + -symbolic)`. However this introduced a
subtle bug: it will return true for icons that don't exist, if such
icons have an acceptable fallback that does exist.

This is not the behavior we want; we only want it to check the icon
theme to see if a symbolic version of the icon name exists if we know
it does not already end with -symbolic.
FIXED-IN: 6.3.2

M  +2    -1    applets/systemtray/statusnotifieritemsource.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/78ca2a2a1a52d20ccc98644156bc5b8067e45b68
Comment 6 Nate Graham 2025-02-19 20:49:25 UTC
Git commit 5bea2e5895adda2617b0fa0649b177cc20931108 by Nate Graham.
Committed on 19/02/2025 at 20:07.
Pushed by ngraham into branch 'Plasma/6.3'.

applets/systemtray: Don't unnecessarily append -symbolic to icon names

41d8bb43f6697b2cd5d3fd57790b9c35d69b11a8 removed a check that the icon
name ends with "-symbolic" in favor of a function call to
`iconLoader()->hasIcon(iconName + -symbolic)`. However this introduced a
subtle bug: it will return true for icons that don't exist, if such
icons have an acceptable fallback that does exist.

This is not the behavior we want; we only want it to check the icon
theme to see if a symbolic version of the icon name exists if we know
it does not already end with -symbolic.
FIXED-IN: 6.3.2


(cherry picked from commit 78ca2a2a1a52d20ccc98644156bc5b8067e45b68)

046230ef applets/systemtray: Don't unnecessarily append -symbolic to icon names

Co-authored-by: Nate Graham <nate@kde.org>

M  +2    -1    applets/systemtray/statusnotifieritemsource.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/5bea2e5895adda2617b0fa0649b177cc20931108
Comment 7 bondarenko 2025-02-24 04:17:43 UTC
Happened after 6.3 update. Akregator tray icon became colourful.

Operating System: CachyOS Linux 
KDE Plasma Version: 6.3.1
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Kernel Version: 6.13.4-2-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 20 × Intel® Xeon® CPU E5-2640 v4 @ 2.40GHz
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 5700 XT
Manufacturer: INTEL
Comment 8 Nate Graham 2025-02-24 13:10:38 UTC
Yes, and the fix is in 6.3.2.